--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
       <ul class="dropdown-content">
         <li><a href="{{ url_for('profile') }}">My Profile</a></li>
         <li><a href="{{ url_for('upload_route') }}">Upload Route</a></li>
-        <li><a href="{{ url_for('ranRoute') }}">I Ran a Route!</a></li>
+        <li><a href="{{ url_for('search_route') }}">I Ran a Route!</a></li>
         <li id="logout"><a href="{{ url_for('logout') }}">Log Out</a></li>
       </ul>
     </li>
